[package]
name = "crossterm-blockchain-dashboard"
version = "0.1.0"
authors = ["wgr523 <wgr523@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
ring = "0.16"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
tiny_http = "0.8.1"
url = ""
horrorshow = "0.8.3"
serde_json = "1.0.64"